--- a/index.html
+++ b/index.html
@@ -1,6 +1,31 @@
-<html>
-    <head>
-        <title>Homework 1</title>
-    </head>
-    <body></body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Homework 1</title>
+</head>
+<body>
+    <header>
+        <nav>
+            <a href="./index.html">WebStudio</a>
+            <ul>
+                <li>
+                    <a href="">Studio</a>
+                </li>
+                <li>
+                    <a href="">Portfolio</a>
+                </li>
+                <li>
+                    <a href="">Contacts</a>
+                </li>
+            </ul>
+        </nav>
+        <address>
+            <a href="mailto:info@devstudio.com">mailto:info@devstudio.com</a>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        </address>
+    </header>
+    
+</body>
 </html>
