--- a/index.html
+++ b/index.html
@@ -61,6 +61,32 @@
                 </li>
             </ul>
         </section>
+
+        <section>
+            <h2>Our Team</h2>
+            <ul>
+                <li>
+                    <img src="/images/img1.webp" alt="Mark Guerrero" />
+                    <h3>Mark Guerrero</h3>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="/images/img2.webp" alt="Tom Ford" />
+                    <h3>Tom Ford</h3>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="/images/img3.webp" alt="Camila Garcia" />
+                    <h3>Camila Garcia</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="/images/img4.webp" alt="Daniel Wilson" />
+                    <h3>Daniel Wilson</h3>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
+        </section>
     </main>
     
 </body>
