--- a/index.html
+++ b/index.html
@@ -66,17 +66,17 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="/images/img1.webp" alt="Mark Guerrero" />
+                    <img src="/images/img1.webp" alt="Mark Guerrero" width="264" />
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="/images/img2.webp" alt="Tom Ford" />
+                    <img src="/images/img2.webp" alt="Tom Ford" width="264" />
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="/images/img3.webp" alt="Camila Garcia" />
+                    <img src="/images/img3.webp" alt="Camila Garcia" width="264" />
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
