--- a/index.html
+++ b/index.html
@@ -21,9 +21,15 @@
                 </li>
             </ul>
         </nav>
-        <address>            
-            <a href="mailto:info@devstudio.com">mailto:info@devstudio.com</a>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        <address>
+            <ul>
+                 <li>           
+                    <a href="mailto:info@devstudio.com">mailto:info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+                </li>
+            </ul>
         </address>
     </header>
     <main>
@@ -81,7 +87,7 @@
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/img4.webp" alt="Daniel Wilson" />
+                    <img src="./images/img4.webp" alt="Daniel Wilson" width="264" />
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
@@ -89,7 +95,7 @@
         </section>
     </main>
     <footer>
-        <a href="/index.html">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <p>
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
