--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <address>
             <ul>
                  <li>           
-                    <a href="mailto:info@devstudio.com">mailto:info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
                     <a href="tel:+110001111111">+11 (000) 111-11-11</a>
@@ -72,22 +72,22 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="./images/img1.webp" alt="Mark Guerrero" width="264" />
+                    <img src="./images/img1.jpg" alt="Mark Guerrero" width="264" />
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/img2.webp" alt="Tom Ford" width="264" />
+                    <img src="./images/img2.jpg" alt="Tom Ford" width="264" />
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/img3.webp" alt="Camila Garcia" width="264" />
+                    <img src="./images/img3.jpg" alt="Camila Garcia" width="264" />
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/img4.webp" alt="Daniel Wilson" width="264" />
+                    <img src="./images/img4.jpg" alt="Daniel Wilson" width="264" />
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
